[tool.poetry]
name = "rm2pdf"
version = "0.1.0"
description = ""
authors = ["Stefan Wagner <stw@bit-strickerei.de>"]
readme = "README.md"
packages = [{include = "rm2pdf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 80

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "fixme",
    "useless-import-alias",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
enable = ["useless-suppression"]
good-names = "id"

[tool.mypy]
files = "src"

strict = true

warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true

show_error_context = true
show_error_codes = true
show_column_numbers = true
pretty = true

enable_error_code = ["ignore-without-code"]
