[tool.poetry]
name = "rm2pdf"
version = "0.1.0"
description = ""
authors = ["Stefan Wagner <stw@bit-strickerei.de>"]
readme = "README.md"
packages = [{include = "rm2pdf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rmscene = "^0.1.0"
pdfrw = "^0.4"
reportlab = "^3.6.12"
svglib = "^1.5.1"
xdg = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.10"
mypy = "^0.991"
ruff = "^0.0.236"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 80

[tool.pylint.messages_control]
max-line-length = 80
disable = [
    "fixme",
    "useless-import-alias",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
enable = ["useless-suppression"]
good-names = "id"

[tool.mypy]
files = "src"

strict = true

warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true

show_error_context = true
show_error_codes = true
show_column_numbers = true
pretty = true

enable_error_code = ["ignore-without-code"]

[tool.ruff]
select = ["ALL"]

# not really readable, see https://github.com/charliermarsh/ruff/issues/1773
ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D1",
    "D202",
    "D203",
    "D212",
    "E501",
    "PLC0414",
    "PT013",
    "S101",
]

target-version = "py38"

[tool.ruff.per-file-ignores]
"src/rm2pdf/pen.py" = ["ARG002"]
