[tool.poetry]
name = "rm2pdf"
version = "0.2.0a0"
description = ""
authors = ["Stefan Wagner <stw@bit-strickerei.de>"]
readme = "README.md"
packages = [{ include = "rm2pdf", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
rmscene = "^0.4.0"
pdfrw = "^0.4"
reportlab = "^4.0.4"
svglib = "^1.5.1"
pyxdg = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 80

[tool.mypy]
files = "src"

strict = true

warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

disallow_untyped_defs = true
no_implicit_optional = true

show_error_context = true
show_error_codes = true
show_column_numbers = true
pretty = true

enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = ["reportlab.*", "svglib.*", "xdg.*"]
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]

# not really readable, see https://github.com/charliermarsh/ruff/issues/1773
ignore = [
    "ANN101",
    "ANN102",
    "COM812",
    "D1",
    "D202",
    "D203",
    "D212",
    "E501",
    "PLC0414",
    "PT013",
    "S101",
]

target-version = "py310"
line-length = 80

[tool.ruff.isort]
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["rm2pdf"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"src/rm2pdf/pen.py" = ["ARG002"]
